1차 레이아웃 완성

--- a/index.html
+++ b/index.html
@@ -27,36 +27,31 @@
         <div class="items-wrap">
             <section class="oak-items">
                 <h2 class="oak-items ir">oak-items</h2>
-                <ul>
-                    <li class="oak-items-list">
+                <ul class="items">
+                    <li class="oak-items-list tree-house">
                         <div class="list-cover-wrap">
                             <img class="list-cover" src="./images/type-a.png" alt="type-a">
                         </div>
-                        <p class="list-sub">Tree House
-                            <button class="list-button"></button>
-                        </p>
+                        <p class="list-sub">Tree House</p>
                     </li>
-                    <li class="oak-items-list">
+                    <li class="oak-items-list furniture">
                         <div class="list-cover-wrap">
-                            <img class="list-cover" src="./images/type-a.png" alt="type-a">
+                            <img class="list-cover" src="./images/type-b.png" alt="type-a">
                         </div>
-                        <p class="list-sub">Tree House
-                            <button class="list-button"></button>
-                        </p>
+                        <p class="list-sub">Furniture</p>
                     </li>
-                    <li class="oak-items-list">
+                    <li class="oak-items-list wave-woods">
                         <div class="list-cover-wrap">
-                            <img class="list-cover" src="./images/type-a.png" alt="type-a">
+                            <img class="list-cover" src="./images/type-c.png" alt="type-a">
                         </div>
-                        <p class="list-sub">Tree House
-                            <button class="list-button"></button>
-                        </p>
-                    </li>
+                        <p class="list-sub">Wave woods</p>
+                    </li> 
+                    
                 </ul>
             </section>
         </div>
-        <footer>
-            footer
+        <footer class="footer">
+            2015 © OAK LABORATORY
         </footer>
     </body>
 </html>
